# koshell

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
crates/koshell-rs/: Cargo.toml
crates/koshell-rs/src/: auth_cli.rs  cli.rs  context.rs  daemon_cli.rs  daemon_spawn.rs  event_log.rs  ipc.rs  lib.rs  logging.rs  main.rs  mirror.rs  model_cli.rs  presentation.rs  reload_cli.rs  screen_diff.rs  session.rs  shell.rs  shell_init.rs  shell_integration.rs  status_cli.rs  timeline.rs  trigger.rs
crates/koshell-rs/tests/: anchored_stream_pty.rs  daemon_cli.rs  daemon_spawn_pty.rs  event_log_pty.rs  fail_open_pty.rs  legacy_terminal_output_pty.rs  model_cli_pty.rs  pending_trigger_pty.rs  repl_completion_pty.rs  shell_init_pty.rs  shell_integration_pty.rs  signal_exit_pty.rs
docs/: ai-context.md  architecture.md  design-0001-repl-command-completion.md  design-0002-ai-output-and-context-boundaries.md  design-0003-shell-init-auto-wrap.md  design-0004-ipc-version-enforcement.md  design-0005-presentation-line-position-and-prompt-redraw.md  design-0006-interrupting-ai-responses.md  design-0007-dogfooding-event-log.md  design-0008-daemon-lifecycle-auto-spawn-and-bun-runtime.md  design-0009-tty-scoped-nesting-marker.md  design-0010-held-output-block-release-and-stall-notice.md  design-0011-koshell-provider-configuration.md  design-0012-system-install-makefile-and-man-pages.md  (+23 more)
(+32 files in other folders)
