[workspace]
resolver = "3"
members = ["crates/koshell-rs", "crates/koshell-proto"]

[workspace.package]
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
koshell-proto = { path = "crates/koshell-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
